--- a/topografiya/templates/geodezis/head_komeral/checking_komeral_works.html
+++ b/topografiya/templates/geodezis/head_komeral/checking_komeral_works.html
@@ -521,7 +521,7 @@
                                                     {% if pdowork.isset_programwork == True %}
                                                         Ишни ҳисобот ёзишга юбориш
                                                     {% else %}
-                                                        Ишни якунлаш печатга юбориш
+                                                        Ишни печатга юбориш
                                                     {% endif %}
 
                                                 </button>
