--- a/topografiya/templates/show.html
+++ b/topografiya/templates/show.html
@@ -1,7 +1,7 @@
 {% extends 'master.html' %}
 
 {% load static %}
-{% block title %} Топографик материалларни чоп етиш {% endblock %}
+{% block title %} Aрхивга келиб тушган ишлар ҳақида маълумотлар {% endblock %}
 
 {% block content%}
 
@@ -126,7 +126,7 @@
                   <div class="row">
                       <div class="col-md-12">
                             <ol>
-                                {% for work in rejects %}
+                                {% for work in rejects_programworks %}
                                     <hr>
                                        <li><a href="/{{ work.file }}"> Қайтариш сабаби аризаси</a></li>
                                        <li>{{ work.reason }}</li>
@@ -134,6 +134,39 @@
                                 {% endfor %}
 
                             </ol>
+
+                            <hr>
+                            <ol>
+                                {% for work in rejects_akt_polevoy_works %}
+                                    <hr>
+                                       <li><a href="/{{ work.file }}"> Қайтариш сабаби аризаси</a></li>
+                                       <li>{{ work.reason }}</li>
+                                    <hr>
+                                {% endfor %}
+
+                            </ol>
+                            <hr>
+                            <ol>
+                                {% for work in rejects_akt_komeral_works %}
+                                    <hr>
+                                       <li><a href="/{{ work.file }}"> Қайтариш сабаби аризаси</a></li>
+                                       <li>{{ work.reason }}</li>
+                                    <hr>
+                                {% endfor %}
+
+                            </ol>
+                            <hr>
+                            <ol>
+                                {% for work in rejects_reports %}
+                                    <hr>
+                                       <li><a href="/{{ work.file }}"> Қайтариш сабаби аризаси</a></li>
+                                       <li>{{ work.reason }}</li>
+                                    <hr>
+                                {% endfor %}
+
+                            </ol>
+                            <hr>
+
                       </div>
                   </div>
               </div>
@@ -356,21 +389,21 @@
                     <div class="row">
 
                         <div class="col-sm-6">
-                            <h3>Топографик материалларни чоп етиш</h3>
+                            <h3>Aрхивга келиб тушган ишлар ҳақида маълумотлар</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
-                                <li class="breadcrumb-item"><a href="{% url 'ogogd_printer_works' %}">Топографик материалларни чоп етиш</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'history' %}">Архив</a></li>
                                 <li class="breadcrumb-item" ><a href="{% url 'open_to_print' id=workerobject.object.id %}">{{ workerobject.object.pdowork.object_name }}</a></li>
                             </ol>
 
                         </div>
 
                         <div class="col-sm-6 text-end">
-                            {% if rejects %}
+                            {% if sum %}
                                 <button  class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#exampleModal1"><i class="fa fa-refresh"></i>
                                     Рад этилишлар сони
                                      <span class="badge rounded-pill badge-warning">
-                                        <b class="text-white">{{ rejects.count }}</b>
+                                        <b class="text-white">{{ sum }}</b>
                                      </span>
 
                                 </button>
@@ -392,7 +425,7 @@
                         <div class="file-content">
                             <div class="card">
                                 <div class="card-body file-manager ">
-                                    <h4 class="m-b-20 m-t-20">Муҳандислик тармоқлари сиёмкаси бўйича бош геодезис назорати</h4>
+                                    <h4 class="m-b-20 m-t-20">Aрхивга келиб тушган ишлар ҳақида маълумотлар</h4>
                                     <div class="row m-b-30">
                                         <div class="col-lg-12">
                                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6139262.264677291!2d60.086000668460755!3d41.29392364762516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b20a5d676b1%3A0xca0a6dad7e841e20!2z0KPQt9Cx0LXQutC40YHRgtCw0L0!5e0!3m2!1sru!2s!4v1642200261479!5m2!1sru!2s"
@@ -488,6 +521,18 @@
                                         </li>
 
 
+                                        {% if pdowork.isset_programwork == True %}
+                                        <li class="file-box m-t-5">
+                                            <div class="file-top"><i class="fa fa-file-pdf-o txt-primary"></i></div>
+                                            <div class="file-bottom ">
+                                                <h6>11. Топографик геодезик дастури</h6>
+                                                <p>Ознакомиться с файлом отправки</p>
+                                                <button class="btn btn-primary w-100 m-t-10">Кўриш</button>
+                                            </div>
+                                        </li>
+                                        {% endif %}
+
+
                                     </ul>
 
 {#                                    <ul class="folder ">#}
@@ -505,60 +550,7 @@
 {#                                    <div class="card">#}
 
 
-                                    <hr>
-                                    <br>
-                                    <br>
-                                    <div class="row p-r-40">
 
-
-                                            <div class="col-md-12 card p-2 shadow-lg">
-                                                <button class="btn btn-success btn-lg"  type="button" worker="{{ user.profile.full_name }}" work-id="{{ work.object.id }}"  id="confirm_print2"  style="width: 100%"> <i class="fa fa-print"></i>
-                                                   Топографик материалларни чоп етиш
-                                                </button>
-                                            </div>
-
-                                     <input type="text" name="work_id" id="work_id" value="{{ workerobject.object.id }}" style="display: none">
-                                            <input type="text" name="worker" id="worker" value="{{ user.profile.full_name }}" style="display: none">
-                                            {% csrf_token %}
-
-                                        <div class="btn-foot m-t-50 m-b-40 d-flex align-items-center">
-{#                                            <button class="btn btn-outline-danger m-r-20" data-bs-toggle="modal"#}
-{#                                                    data-bs-target="#exampleModalCenter">Қайтариш#}
-{#                                            </button>#}
-{#                                            <button id="bootstrap-notify-gen-btn" class="btn btn-outline-success">#}
-{#                                                Камерал назоратга юбориш#}
-{#                                            </button>#}
-                                            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-                                                 aria-labelledby="exampleModalCenter" aria-hidden="true">
-                                                <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header bg-danger">
-                                                            <h5 style="color: white;" class="modal-title">Хатолик
-                                                                хабарини тасдиқлаш</h5>
-                                                            <div type="button" data-bs-dismiss="modal"
-                                                                 aria-label="Close">x
-                                                            </div>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <ul class="messages text text-center text-danger" id="error_show" style="display:none">
-                                                               <div class="alert alert-danger">
-                                                                   <li style="font-size:14px" class="text text-white" ><b> Maydonlarni to'ldiring !</b></li>
-                                                               </div>
-                                                           </ul>
-                                                            <br>
-                                                            <h5 class="m-b-20">Хатолик аризаси файли</h5>
-                                                            <input class="form-control" id="reason_file" name="reason_file" type="file">
-                                                            <h5 class="m-t-20 m-b-20">Хатолик аризаси матни</h5>
-                                                            <textarea type="text" class="form-control" id="reason" name="reason" rows="6"></textarea>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button  class="btn btn-outline-danger" id="geodezis_deny_komeral" type="button">Юбориш</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                             </div>
                         </div>
                     </div>
